2010-04-05 05:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Native Save and Open Sheets, Folder Picker when appropriate

2010-03-17 01:57-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add WinNSOpenPanel.m to list of files.
	* WinNSMenu.m: Expand font size for wraparound calculation.
	* WinNSOpenPanel.m: Use native panels for open and save panels.

2010-03-05 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m: Improve display of keyEquivalent modifiers,
	including Shift.

2010-02-24 22:12-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinUXTheme.m: Change color of selected menu text.  Previously
	it was white on almost white which was unreadable.

2010-02-24 16:00-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Resources/ThemeImages/common_TabDownUnSelectedLeft.tif
	* Resources/ThemeImages/common_TabDownUnSelectedRight.tif
	* Resources/ThemeImages/common_TabSelectedLeft.tif
	* Resources/ThemeImages/common_TabSelectedRight.tif
	* Resources/ThemeImages/common_TabSelectedToUnSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectToSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectedLeft.tif
	* Resources/ThemeImages/common_TabUnSelectedRight.tif: Add blue borders
	to blend in better with tab buttons on Windows.

2010-02-24 15:10-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Resources/ThemeImages/common_TabDownSelectedLeft.tif
	* Resources/ThemeImages/common_TabDownUnSelectedLeft.tif
	* Resources/ThemeImages/common_TabDownUnSelectedRight.tif
	* Resources/ThemeImages/common_TabSelectedLeft.tif
	* Resources/ThemeImages/common_TabSelectedRight.tif
	* Resources/ThemeImages/common_TabSelectedToUnSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectToSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectedJunction.tif
	* Resources/ThemeImages/common_TabUnSelectedLeft.tif