@@ -1,3 +1,7 @@
+2010-04-11 Eric Wasylishen <ewasylishen@gmail.com>
+
+	* WinNSOpenPanel.m: Add forgotten -directory methods
+
 2010-04-05 05:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>
 
 	* WinNSOpenPanel.m: Native Save and Open Sheets, Folder Picker when appropriate
